commit to transfer to tablet

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
           <li class="nav__link">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black click"
               >About</a
             >
           </li>
           <li class="nav__link">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black click"
               >Projects</a
             >
           </li>
           <li class="nav__link">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black click"
               >Contact</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link click">
             <i class="fa-solid fa-circle-half-stroke"></i>
           </li>
         </ul>
@@ -58,18 +58,26 @@
           <p class="header__para">
             I'm a
             <span class="color-text">Frontend Software Engineer</span> with a
-            strong passion for building web applications with gtreat user
+            strong passion for building web applications with great user
             experiences.<br />Here's a bit more
             <span class="color-text">about me</span>.
           </p>
           <div class="social__list">
-            <a href="" class="social__link">
+            <a
+              href="https://www.linkedin.com/in/michael-innella-b5567021b/"
+              target="_blank"
+              class="social__link click"
+            >
               <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="" class="social__link">
+            <a
+              href="https://github.com/Mike-Innella"
+              target="_blank"
+              class="social__link click"
+            >
               <i class="fa-brands fa-github"></i>
             </a>
-            <a href="" class="social__link">
+            <a href="#" class="social__link click">
               <i class="fa-solid fa-file-pdf"></i>
             </a>
           </div>
