fixed scaling issues on clicks and added df to social__link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <meta charset="UTF-8" />
   </head>
   <body>
     <section id="landing-page">
@@ -23,29 +24,29 @@
           <img id="personal-logo" src="./assets/Logo Black.PNG" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black click"
               >About</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black click"
               >Projects</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black click"
               >Contact</a
             >
           </li>
-          <li class="nav__link click">
-            <i class="fa-solid fa-circle-half-stroke"></i>
+          <li class="nav__link">
+            <i class="fa-solid fa-circle-half-stroke click"></i>
           </li>
         </ul>
       </nav>
@@ -58,27 +59,26 @@
           <p class="header__para">
             I'm a
             <span class="color-text">Frontend Software Engineer</span> with a
-            strong passion for building web applications with great user
-            experiences.<br />Here's a bit more
+            strong passion for building web applications that are responsive and that provide user-friendly experiences!<br />Here's a bit more
             <span class="color-text">about me</span>.
           </p>
           <div class="social__list">
             <a
               href="https://www.linkedin.com/in/michael-innella-b5567021b/"
               target="_blank"
-              class="social__link click"
+              class="social__link"
             >
-              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-linkedin click"></i>
             </a>
             <a
               href="https://github.com/Mike-Innella"
               target="_blank"
-              class="social__link click"
+              class="social__link"
             >
-              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-github click"></i>
             </a>
-            <a href="#" class="social__link click">
-              <i class="fa-solid fa-file-pdf"></i>
+            <a href="#" class="social__link">
+              <i class="fa-solid fa-file-pdf click"></i>
             </a>
           </div>
         </div>
