made some layout tweaks and CSS effects.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <p class="header__para">
             I'm a
             <span class="color-text">Frontend Software Engineer</span> with a
-            strong passion for building web applications that are responsive and that provide user-friendly experiences!<br />Here's a bit more
+            strong passion for building web applications that are responsive and
+            that provide user-friendly experiences!<br />Here's a bit more
             <span class="color-text">about me</span>.
           </p>
           <div class="social__list">
