finished most of landing page and started projects section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             >
           </li>
           <li class="nav__link">
-            <i class="fa-solid fa-circle-half-stroke click"></i>
+            <a
+              href="#"
+              class="nav__link--anchor--icon link__hover-effect link__hover-effect--black"
+            >
+              <i class="fa-solid fa-circle-half-stroke click"></i
+            ></a>
           </li>
         </ul>
       </nav>
@@ -78,12 +83,27 @@
             >
               <i class="fa-brands fa-github click"></i>
             </a>
-            <a href="#" class="social__link">
+            <a href="#" target="_blank" class="social__link">
               <i class="fa-solid fa-file-pdf click"></i>
             </a>
           </div>
         </div>
       </header>
+      <div class="mail__btn click">
+        <i class="fa-solid fa-envelope"></i>
+      </div>
+      <a href="#projects" class="scroll"
+        ><div class="scroll__icon click"></div
+      ></a>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="color-text"> projects</span>.
+          </h1>
+        </div>
+      </div>
     </section>
   </body>
 </html>
