added resume placeholder, minor css adjustments

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             >
               <i class="fa-brands fa-github click"></i>
             </a>
-            <a href="#" target="_blank" class="social__link">
+            <a href="./assets/Michael A. Innella Resume.pdf" target="_blank" class="social__link">
               <i class="fa-solid fa-file-pdf click"></i>
             </a>
           </div>
