added FES assets, added to projects section, currently on creating project section with description.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
             >
               <i class="fa-brands fa-github click"></i>
             </a>
-            <a href="./assets/Michael A. Innella Resume.pdf" target="_blank" class="social__link">
+            <a
+              href="./assets/Michael A. Innella Resume.pdf"
+              target="_blank"
+              class="social__link"
+            >
               <i class="fa-solid fa-file-pdf click"></i>
             </a>
           </div>
@@ -102,6 +106,34 @@
           <h1 class="section__title">
             Here are some of my <span class="color-text"> projects</span>.
           </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/FES Assets/blinker mockup.png"
+                  alt=""
+                  class="project__img"
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title"></h3>
+                  <h4 class="project__description--sub-title"></h4>
+                  HTML, CSS, JS.
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perferendis eaque dolorem voluptatem accusantium quasi
+                    commodi ut earum unde at aliquam.
+                  </p>
+                  <a href="#" class="project__description--link">
+                    <i class="fab fa-github"></i
+                  ></a>
+                  <a href="#" class="project__description--link">
+                    <i class="fas fa-link"></i
+                  ></a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
