finished designing projects section, started designing footer section.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
-                  <h3 class="project__description--title"></h3>
+                  <h3 class="project__description--title">Project Title</h3>
                   <h4 class="project__description--sub-title"></h4>
                   HTML, CSS, JS.
                   <p class="project__description--para">
@@ -137,5 +137,19 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <figure>
+          <img src="./assets/Logo White.PNG" alt="" />
+        </figure>
+        <div class="footer__social--list">
+          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">Github</a>
+          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">LinkedIn</a>
+          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">Contact</a>
+          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">Resume</a>
+        </div>
+        <div class="footer__copyright">Copyright</div>
+      </div>
+    </footer>
   </body>
 </html>
