finished designing footer section, added and finished tech languages section.

--- a/index.html
+++ b/index.html
@@ -100,6 +100,29 @@
         ><div class="scroll__icon click"></div
       ></a>
     </section>
+    <section id="languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            My tech <span class="color-text">languages</span>.
+          </h1>
+          <ul class="tech__list">
+            <li class="tech__list--point">
+              <i class="fa-brands fa-html5"></i>
+              <p class="tech__list--text">HTML5</p>
+            </li>
+            <li class="tech__list--point">
+              <i class="fa-brands fa-css3-alt"></i>
+              <p class="tech__list--text">CSS3</p>
+            </li>
+            <li class="tech__list--point">
+              <i class="fa-brands fa-js"></i>
+              <p class="tech__list--text">JAVASCRIPT</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <section id="projects">
       <div class="container">
         <div class="row">
@@ -139,16 +162,44 @@
     </section>
     <footer>
       <div class="container">
-        <figure>
-          <img src="./assets/Logo White.PNG" alt="" />
+        <figure class="footer__logo">
+          <img src="./assets/Logo White.PNG" alt="" id="personal-logo" />
         </figure>
         <div class="footer__social--list">
-          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">Github</a>
-          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">LinkedIn</a>
-          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">Contact</a>
-          <a href="#" class="footer__social--link liver__hover-effect liver__hover-effect--white">Resume</a>
+          <figure class="link--box">
+            <a
+              href="https://github.com/Mike-Innella"
+              target="_blank"
+              class="footer__social--link liver__hover-effect liver__hover-effect--white"
+              >Github</a
+            >
+          </figure>
+          <figure class="link--box">
+            <a
+              href="https://www.linkedin.com/in/michael-innella-b5567021b/"
+              target="_blank"
+              class="footer__social--link liver__hover-effect liver__hover-effect--white"
+              >LinkedIn</a
+            >
+          </figure>
+          <figure class="link--box">
+            <a
+              href="#"
+              target="_blank"
+              class="footer__social--link liver__hover-effect liver__hover-effect--white"
+              >Contact</a
+            >
+          </figure>
+          <figure class="link--box">
+            <a
+              href="./assets/Michael A. Innella Resume.pdf"
+              target="_blank"
+              class="footer__social--link liver__hover-effect liver__hover-effect--white"
+              >Resume</a
+            >
+          </figure>
         </div>
-        <div class="footer__copyright">Copyright</div>
+        <div class="footer__copyright">&copy; Michael A. Innella</div>
       </div>
     </footer>
   </body>
