made mail button position:fixed, added a second project container, change animations on nav links.

--- a/index.html
+++ b/index.html
@@ -25,31 +25,16 @@
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link click">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black click"
-              >About</a
-            >
+            <a href="#" class="nav__link--anchor click">About</a>
           </li>
           <li class="nav__link click">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black click"
-              >Projects</a
-            >
+            <a href="#projects" class="nav__link--anchor click">Projects</a>
           </li>
           <li class="nav__link click">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black click"
-              >Contact</a
-            >
+            <a href="#" class="nav__link--anchor click">Contact</a>
           </li>
           <li class="nav__link">
-            <a
-              href="#"
-              class="nav__link--anchor--icon link__hover-effect link__hover-effect--black"
-            >
+            <a href="#" class="nav__link--anchor--icon">
               <i class="fa-solid fa-circle-half-stroke click"></i
             ></a>
           </li>
@@ -159,6 +144,38 @@
           </ul>
         </div>
       </div>
+      <div class="container">
+        <div class="row">
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/FES Assets/blinker mockup.png"
+                  alt=""
+                  class="project__img"
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Project Title</h3>
+                  <h4 class="project__description--sub-title"></h4>
+                  HTML, CSS, JS.
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perferendis eaque dolorem voluptatem accusantium quasi
+                    commodi ut earum unde at aliquam.
+                  </p>
+                  <a href="#" class="project__description--link">
+                    <i class="fab fa-github"></i
+                  ></a>
+                  <a href="#" class="project__description--link">
+                    <i class="fas fa-link"></i
+                  ></a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="container">
@@ -170,15 +187,15 @@
             <a
               href="https://github.com/Mike-Innella"
               target="_blank"
-              class="footer__social--link liver__hover-effect liver__hover-effect--white"
-              >Github</a
+              class="footer__social--link link__hover--effect--white"
+              >GitHub</a
             >
           </figure>
           <figure class="link--box">
             <a
               href="https://www.linkedin.com/in/michael-innella-b5567021b/"
               target="_blank"
-              class="footer__social--link liver__hover-effect liver__hover-effect--white"
+              class="footer__social--link link__hover--effect--white"
               >LinkedIn</a
             >
           </figure>
@@ -186,7 +203,7 @@
             <a
               href="#"
               target="_blank"
-              class="footer__social--link liver__hover-effect liver__hover-effect--white"
+              class="footer__social--link link__hover--effect--white"
               >Contact</a
             >
           </figure>
@@ -194,7 +211,7 @@
             <a
               href="./assets/Michael A. Innella Resume.pdf"
               target="_blank"
-              class="footer__social--link liver__hover-effect liver__hover-effect--white"
+              class="footer__social--link link__hover--effect--white"
               >Resume</a
             >
           </figure>
