working on modal section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,37 @@
       <a href="#projects" class="scroll"
         ><div class="scroll__icon click"></div
       ></a>
+      <div class="modal">
+        <div class="modal__half modal__about">
+          <h3 class="modal__title">Here's a bit about me.</h3>
+          <h4 class="modal__sub-title modal__sub-title--about">
+            Frontend Software Engineer.
+          </h4>
+          <p class="modal__para">
+            I'm a 31 year old American
+            <span class="color-text">frontend software engineer</span> who is
+            driven to create great user
+            <span class="color-text">experiences</span>.<br />I currently work
+            on difficult and different engineering problems with
+            <span class="color-text">experienced</span> software engineers.
+            <br />
+            I have a diverse life experience that allows me to approach problems
+            in a <span class="color-text">unique</span> way.
+          </p>
+          <div class="modal__languages--wrapper">
+            <figure class="modal__languages">
+              <img src="./assets/tech languages/HTML Logo.png" alt="" />
+            </figure>
+            <figure class="modal__languages">
+              <img src="./assets/tech languages/CSS Logo.png" alt="" />
+            </figure>
+            <figure class="modal__languages">
+              <img src="./assets/tech languages/JS Logo.png" alt="" />
+            </figure>
+          </div>
+        </div>
+        <div class="modal__half modal__contact">Let's have a chat!</div>
+      </div>
     </section>
     <section id="languages">
       <div class="container">
