still working on modal section

--- a/index.html
+++ b/index.html
@@ -86,10 +86,17 @@
       ></a>
       <div class="modal">
         <div class="modal__half modal__about">
-          <h3 class="modal__title">Here's a bit about me.</h3>
-          <h4 class="modal__sub-title modal__sub-title--about">
-            Frontend Software Engineer.
-          </h4>
+          <div class="title__section--wrapper">
+            <div class="title__section--text">
+              <h3 class="modal__title">Here's a bit about me.</h3>
+              <h4 class="modal__sub-title modal__sub-title--about">
+                Frontend Software Engineer.
+              </h4>
+            </div>
+            <figure class="profile--wrapper">
+              <img src="./assets/profile pic.jpg" alt="" class="profile__pic" />
+            </figure>
+          </div>
           <p class="modal__para">
             I'm a 31 year old American
             <span class="color-text">frontend software engineer</span> who is
@@ -103,13 +110,28 @@
           </p>
           <div class="modal__languages--wrapper">
             <figure class="modal__languages">
-              <img src="./assets/tech languages/HTML Logo.png" alt="" />
+              <img
+                src="./assets/tech languages/HTML no script.png"
+                alt=""
+                class="modal__language--pic"
+              />
+              <h4 class="language__text">HTML</h4>
             </figure>
             <figure class="modal__languages">
-              <img src="./assets/tech languages/CSS Logo.png" alt="" />
+              <img
+                src="./assets/tech languages/CSS no script.png"
+                alt=""
+                class="modal__language--pic"
+              />
+              <h4 class="language__text">CSS</h4>
             </figure>
             <figure class="modal__languages">
-              <img src="./assets/tech languages/JS Logo.png" alt="" />
+              <img
+                src="./assets/tech languages/JS Logo.png"
+                alt=""
+                class="modal__language--pic"
+              />
+              <h4 class="language__text">JAVASCRIPT</h4>
             </figure>
           </div>
         </div>
