--- a/index.html
+++ b/index.html
@@ -181,7 +181,15 @@
               </button>
             </div>
           </form>
+          <div class="modal__overlay modal__overlay--loading">
+            <i class="fas fa-spinner"></i>
+          </div>
+          <div class="modal__overlay modal__overlay--success">
+            Thanks for your message!<br />
+            Looking forward to speaking with you soon.
+          </div>
         </div>
+        <i class="fas fa-times modal__exit click"></i>
       </div>
     </section>
     <section id="languages">
