--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="index.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init({
+          publicKey: "cePFoU8dvsaDAlAyz",
+        });
+      })();
+    </script>
     <meta charset="UTF-8" />
   </head>
   <body>
@@ -146,7 +158,7 @@
           <h4 class="modal__sub-title modal__sub-title--contact">
             I'm currently open for new opportunities!
           </h4>
-          <form id="contact__form" action="">
+          <form id="contact__form" onsubmit="contact(event)">
             <div class="form__item">
               <label class="form__item--label">Name</label>
               <input
