finished modal, almost done with dark-theme, working on animated background shapes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="landing-page">
       <nav>
         <figure class="nav__link--logo">
-          <img id="personal-logo" src="./assets/Logo Black.PNG" alt="" />
+          <img id="personal-logo" src="./assets/Logo White.PNG" />
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link click">
@@ -47,7 +47,7 @@
               >Contact</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link" onclick=" toggleContrast()">
             <a href="#" class="nav__link--anchor--icon">
               <i class="fa-solid fa-circle-half-stroke click"></i
             ></a>
@@ -65,7 +65,9 @@
             <span class="color-text">Frontend Software Engineer</span> with a
             strong passion for building web applications that are responsive and
             that provide user-friendly experiences!<br />Here's a bit more
-            <span class="color-text">about me</span>.
+            <span class="color-text click" onclick=" toggleModal()"
+              >about me</span
+            >.
           </p>
           <div class="social__list">
             <a
@@ -228,6 +230,15 @@
           </ul>
         </div>
       </div>
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--o" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--1" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--2" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--3" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--4" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--5" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--6" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--7" />
+      <img src="./assets/FES Assets/triangle.svg" class="shape shape--8" />
     </section>
     <section id="projects">
       <div class="container">
