correct subtitle issue with project descrip.  developing media qeuries. modal still needs work on smaller media.

--- a/index.html
+++ b/index.html
@@ -257,19 +257,23 @@
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">Project Title</h3>
-                  <h4 class="project__description--sub-title"></h4>
-                  HTML, CSS, JS.
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JS.
+                  </h4>
+
                   <p class="project__description--para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis eaque dolorem voluptatem accusantium quasi
                     commodi ut earum unde at aliquam.
                   </p>
-                  <a href="#" class="project__description--link">
-                    <i class="fab fa-github"></i
-                  ></a>
-                  <a href="#" class="project__description--link">
-                    <i class="fas fa-link"></i
-                  ></a>
+                  <figure class="project__anchors">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i
+                    ></a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </figure>
                 </div>
               </div>
             </li>
@@ -289,19 +293,22 @@
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">Project Title</h3>
-                  <h4 class="project__description--sub-title"></h4>
-                  HTML, CSS, JS.
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JS.
+                  </h4>
                   <p class="project__description--para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Perferendis eaque dolorem voluptatem accusantium quasi
                     commodi ut earum unde at aliquam.
                   </p>
-                  <a href="#" class="project__description--link">
-                    <i class="fab fa-github"></i
-                  ></a>
-                  <a href="#" class="project__description--link">
-                    <i class="fas fa-link"></i
-                  ></a>
+                  <figure class="project__anchors">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i
+                    ></a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </figure>
                 </div>
               </div>
             </li>
