--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
           </div>
         </div>
       </header>
-      <div class="mail__btn click" onclick="toggleModal()">
-        <i class="fa-solid fa-envelope"></i>
-      </div>
+      <a href="#">
+        <div class="mail__btn click" onclick="toggleModal()">
+          <i class="fa-solid fa-envelope"></i>
+        </div>
+      </a>
       <a href="#projects" class="scroll"
         ><div class="scroll__icon click"></div
       ></a>
